--- a/index.html
+++ b/index.html
@@ -1,50 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <title>Customer Invoice Registration</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <title>Customer Invoice Form</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
 <div class="card">
+  <div class="logo-wrap">
+    <img src="logo.png" alt="Company Logo" />
+  </div>
 
-    <div class="logo-wrap">
-        <img src="logo.png" alt="Company Logo">
+  <h1 class="title">Customer Invoice Form</h1>
+  <p class="subtitle">Please fill in the form and upload your invoice.</p>
+
+  <form id="invoiceForm">
+    <div class="form-group">
+      <label for="full_name">Full Name *</label>
+      <input type="text" id="full_name" required />
     </div>
 
-    <h1 class="title">Customer Invoice Form</h1>
-    <p class="subtitle">Please fill in the form and upload your invoice.</p>
+    <div class="form-group">
+      <label for="phone">Phone Number *</label>
+      <input type="tel" id="phone" required />
+    </div>
 
-    <form id="invoiceForm">
-        <div class="form-group">
-            <label>Full Name *</label>
-            <input type="text" id="fullName" required>
-        </div>
+    <div class="form-group">
+      <label for="invoice_id">Invoice ID *</label>
+      <input type="text" id="invoice_id" required />
+    </div>
 
-        <div class="form-group">
-            <label>Phone Number *</label>
-            <input type="tel" id="phone" required>
-        </div>
+    <div class="form-group">
+      <label for="image">Invoice Image *</label>
+      <input type="file" id="image" accept="image/*" capture="environment" required />
+    </div>
 
-        <div class="form-group">
-            <label>Invoice ID *</label>
-            <input type="text" id="invoiceId" required>
-        </div>
+    <button type="submit" id="submitBtn">Submit Invoice ✔</button>
 
-        <div class="form-group">
-            <label>Invoice Image *</label>
-            <input type="file" id="invoiceImage" accept="image/*" capture="environment" required>
-        </div>
-
-        <button type="submit" id="submitBtn">Submit Invoice</button>
-
-        <p id="status"></p>
-    </form>
-
+    <p id="status" class="status-text"></p>
+  </form>
 </div>
 
-<script type="module" src="script.js"></script>
+<!-- Supabase UMD bundle -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.49.1/dist/umd/supabase.min.js"></script>
+<!-- Your app logic -->
+<script src="script.js"></script>
 </body>
 </html>
